--- a/main.ui
+++ b/main.ui
@@ -348,6 +348,50 @@
         </item>
        </layout>
       </widget>
+      <widget class="QWidget" name="tab_7">
+       <attribute name="title">
+        <string>Payroll</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout_7">
+        <item row="0" column="2">
+         <widget class="QLabel" name="label_18">
+          <property name="text">
+           <string>End Date</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0" rowspan="4">
+         <widget class="QListWidget" name="listWidget"/>
+        </item>
+        <item row="1" column="2">
+         <widget class="QDateEdit" name="EndPayroll"/>
+        </item>
+        <item row="3" column="1" colspan="2">
+         <widget class="QPushButton" name="ResetPayrollButton">
+          <property name="text">
+           <string>Reset</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QDateEdit" name="StartPayroll"/>
+        </item>
+        <item row="2" column="1" colspan="2">
+         <widget class="QPushButton" name="RunPayrollButton">
+          <property name="text">
+           <string>Run Payroll</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLabel" name="label_17">
+          <property name="text">
+           <string>Start Date</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
      </widget>
     </item>
     <item>
